grid alignment fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; font-size: 16px ;}
 
 
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
